syntax = "proto3";

import "block.proto";
option go_package = "github.com/alphabill-org/alphabill/internal/network/protocol/replication;replication";

message LedgerReplicationRequest {
  bytes system_identifier = 1;
  string node_identifier = 2;
  uint64 begin_block_number = 3;
  uint64 end_block_number = 4;
}

message LedgerReplicationResponse {
  enum Status {
    OK = 0;
    INVALID_REQUEST_PARAMETERS = 1;
    UNKNOWN_SYSTEM_IDENTIFIER = 2;
    BLOCKS_NOT_FOUND = 3;
    UNKNOWN = 4;
  }
  Status status = 1;
  string message = 2;
  repeated Block blocks = 3;
}
